// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkTN_TSVDataRow() -  BookID tests -  should find wrong book ID 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "(expected 'GEN')",
      "extract": "RUT",
      "fieldName": "Book",
      "location": " that was supplied",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  GL Note tests -  should find bad ellipse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…ellipse...",
      "fieldName": "GLQuote",
      "location": " that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Occurrence Note tests -  should find empty note 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Missing OccurrenceNote field",
      "priority": 274,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Occurrence Note tests -  should find white space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Field is only whitespace",
      "priority": 373,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  invalid Original Language 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " that was supplied",
      "message": "Missing occurrence field when we have an original quote",
      "priority": 750,
      "rowID": "f2mg",
    },
    Object {
      "C": "1",
      "V": "1",
      "bookID": "GEN",
      "fieldName": "Occurrence",
      "location": " that was supplied",
      "message": "Missing occurrence field",
      "priority": 791,
      "rowID": "f2mg",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail to find OrigLang Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "passage ⸢וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃⸣",
      "extract": "וְ⁠חֹ֖שחֹ֖שֶךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with leading space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "␣וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected leading space",
      "priority": 109,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "details": "passage ⸢וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃⸣",
      "extract": "(ּ=D1468/H5bc) וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Seems original language quote might not start at the beginning of a word",
      "priority": 620,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with leading word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "‼וְ‼חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected leading word joiner",
      "priority": 770,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'word joiner'",
      "extract": "",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with leading zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "‼וְ⁠חֹ֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected leading zero-width joiner",
      "priority": 771,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which starts with 'zero-width joiner'",
      "extract": "",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with leading zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "passage ⸢וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃⸣",
      "extract": "‌וְ⁠חֹֹ֖֖שֶׁךְ",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with trailing space 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "⁠חֹ֖שֶׁךְ␣",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected trailing space(s)",
      "priority": 95,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with trailing word joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "וְ‼חֹ֖שֶׁךְ‼",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected trailing word joiner",
      "priority": 772,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'word joiner'",
      "extract": "וְ⁠חֹ֖שֶׁךְ⁠",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with trailing zero width joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "וְ⁠חֹ֖שֶׁךְ‼",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unexpected trailing zero-width joiner",
      "priority": 773,
      "rowID": "d7qw",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "quote which ends with 'zero-width joiner'",
      "extract": "וְ⁠חֹ֖שֶׁךְ‍",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should fail with trailing zero width non-joiner 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "passage ⸢וְ⁠הָ⁠אָ֗רֶץ הָיְתָ֥ה תֹ֨הוּ֙ וָ⁠בֹ֔הוּ וְ⁠חֹ֖שֶׁךְ עַל־פְּנֵ֣י תְה֑וֹם וְ⁠ר֣וּחַ אֱלֹהִ֔ים מְרַחֶ֖פֶת עַל־פְּנֵ֥י הַ⁠מָּֽיִם׃⸣",
      "extract": "וְ⁠חֹ֖ש֖שֶׁךְ‌",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Unable to find original language quote in verse text",
      "priority": 916,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  Original Quote tests -  should find missing Original Quote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  SupportReference tests -  should find long SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "ID",
      "location": " (not 5) that was supplied",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "d7q33",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  SupportReference tests -  should find missing SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Verse",
      "location": " that was supplied",
      "message": "Missing row ID field",
      "priority": 779,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  SupportReference tests -  should find short SupportReference 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "ID",
      "location": " (not 3) that was supplied",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "d7q",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  TSV format tests -  empty line should fail 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  TSV format tests -  should fail not TSV 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 1 field",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": undefined,
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  TSV format tests -  should find wrong row count 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "Found 8 fields",
      "location": " that was supplied",
      "message": "Found wrong number of TSV fields (expected 9)",
      "priority": 984,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "(left=1, right=0)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "(left=0, right=1)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail double broken link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "(left=1, right=0)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail double broken link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "(left=0, right=1)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [[ ]] link characters",
      "priority": 845,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail if SupportReference link differs from link in OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "extract": "figs-imperative",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "urb3",
    },
    Object {
      "C": "1",
      "V": "6",
      "bookID": "GEN",
      "details": "detected 1 link but no TA/TW links from [\\"[[rc://*/ta/man/figs-parallelism]]\\"]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "More [[ ]] links than valid TA/TW links",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid doublet link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "12",
      "bookID": "RUT",
      "details": "detected 1 link but no Bible links from [\\"[[rc://*/ta/man/translate/figs-parallelism]], [Doublet](../figs-doublet/01.md)\\"]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "More [ ]( ) links than valid Bible links",
      "priority": 648,
      "rowID": "gnn5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid first link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "extract": "[[rc://*/ta/man/translate/figs-activepassivez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-activepassivez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-activepassivez/01.md",
      "message": "Error loading OccurrenceNote TA link",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "extract": "[[rc://*/ta/man/translate/figs-activepassivez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-activepassivez/01.md",
      "message": "Unable to find OccurrenceNote TA link",
      "priority": 886,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "(SR='figs-activepassive')",
      "extract": "figs-activepassivez",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Link to TA should also be in SupportReference",
      "priority": 786,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "(SR='figs-activepassive')",
      "extract": "figs-imperative",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Link to TA should also be in SupportReference",
      "priority": 786,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid link path 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "7",
      "bookID": "GEN",
      "details": "detected 1 link but no TA/TW links from [\\"[[rc://*/ta/woman/figs-imperative]]\\"]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "More [[ ]] links than valid TA/TW links",
      "priority": 649,
      "rowID": "urb3",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid second link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "extract": "[[rc://*/ta/man/translate/figs-imperativez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-imperativez/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/figs-imperativez/01.md",
      "message": "Error loading OccurrenceNote TA link",
      "priority": 885,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "extract": "[[rc://*/ta/man/translate/figs-imperativez]]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied translate/figs-imperativez/01.md",
      "message": "Unable to find OccurrenceNote TA link",
      "priority": 886,
      "rowID": "zu6f",
    },
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "(SR='figs-activepassive')",
      "extract": "figs-imperativez",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Link to TA should also be in SupportReference",
      "priority": 786,
      "rowID": "zu6f",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid verse link 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "detected 1 link but no Bible links from [\\"[Genesis 1:7](../01/zzz.md)\\"]",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "More [ ]( ) links than valid Bible links",
      "priority": 648,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid verse link end 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "(left=1, middle=1, right=0)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [ ]( ) link characters",
      "priority": 843,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  link tests -  should fail invalid verse link start 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "9",
      "bookID": "GEN",
      "details": "(left=0, middle=1, right=1)",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Mismatched [ ]( ) link characters",
      "priority": 843,
      "rowID": "ha33",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  should find invalid Book ID, chapter number, ID, SupportReference, quotes, OccurrenceNote 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "(expected 'GEN')",
      "extract": "GIN",
      "fieldName": "Book",
      "location": " that was supplied",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "(expected '1')",
      "extract": "200",
      "fieldName": "Chapter",
      "location": " that was supplied",
      "message": "Wrong chapter number",
      "priority": 976,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "200",
      "fieldName": "Chapter",
      "location": " that was supplied",
      "message": "Invalid large chapter number",
      "priority": 823,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "(expected '2')",
      "extract": "9",
      "fieldName": "Verse",
      "location": " that was supplied",
      "message": "Wrong verse number",
      "priority": 975,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "Verse",
      "location": " that was supplied",
      "message": "Unable to check verse number",
      "priority": 812,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "ID",
      "location": " (not 5) that was supplied",
      "message": "Row ID should be exactly 4 characters",
      "priority": 778,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Only 'Just-In-Time Training' TA articles allowed here",
      "priority": 788,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading TA link",
      "priority": 888,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "extract": "17",
      "fieldName": "Occurrence",
      "location": " that was supplied",
      "message": "Invalid occurrence field",
      "priority": 792,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…ellipse...",
      "fieldName": "GLQuote",
      "location": " that was supplied",
      "message": "Unexpected doubled . characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 0,
      "extract": "<br>Boo hoo,,<b…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected leading line break",
      "priority": 107,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 11,
      "extract": "…Boo hoo,,<br> l…",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected doubled , characters",
      "priority": 177,
      "rowID": "W-3r5",
    },
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "characterIndex": 30,
      "extract": "…my shoe !",
      "fieldName": "OccurrenceNote",
      "lineNumber": 1,
      "location": " that was supplied",
      "message": "Unexpected ! character after space",
      "priority": 191,
      "rowID": "W-3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  should find invalid SupportReference and missing quotes 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Only 'Just-In-Time Training' TA articles allowed here",
      "priority": 788,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied translate/Laugh/01.md: tn-table-row-check.test getFile(): Could not find src/__tests__/fixtures/unfoldingWord/en_ta/translate/Laugh/01.md",
      "message": "Error loading TA link",
      "priority": 888,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "extract": "Laugh",
      "fieldName": "SupportReference",
      "location": " that was supplied",
      "message": "Link to TA should also be in OccurrenceNote",
      "priority": 787,
      "rowID": "w3r5",
    },
    Object {
      "C": "2",
      "V": "3",
      "bookID": "GEN",
      "fieldName": "OrigQuote",
      "location": " that was supplied",
      "message": "Missing OrigQuote field",
      "priority": 919,
      "rowID": "w3r5",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  should find language code instead of asterisk 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "EXO",
      "characterIndex": 90,
      "details": "(not 'en')",
      "extract": "…[[rc://en/ta/ma…",
      "fieldName": "OccurrenceNote",
      "location": " that was supplied",
      "message": "Resource container link should have '*' language code",
      "priority": 450,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  should find mismatched bookId 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "1",
      "V": "2",
      "bookID": "GEN",
      "details": "(expected 'GEN')",
      "extract": "EXO",
      "fieldName": "Book",
      "location": " that was supplied",
      "message": "Wrong book identifier",
      "priority": 978,
      "rowID": "d7qw",
    },
  ],
}
`;

exports[`checkTN_TSVDataRow() -  should find mismatched chapter verse 1`] = `
Object {
  "noticeList": Array [
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "(expected '22')",
      "extract": "2",
      "fieldName": "Chapter",
      "location": " that was supplied",
      "message": "Wrong chapter number",
      "priority": 976,
      "rowID": "d7qw",
    },
    Object {
      "C": "22",
      "V": "33",
      "bookID": "GEN",
      "details": "(expected '33')",
      "extract": "3",
      "fieldName": "Verse",
      "location": " that was supplied",
      "message": "Wrong verse number",
      "priority": 975,
      "rowID": "d7qw",
    },
  ],
}
`;
